<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/AccountDetailstextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accDet"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/join_un_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/unReq"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/join_email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/emailReq"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/join_pass_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/passReq"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/join_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submitandcontinue" />

</LinearLayout>